# esp32-llm-serial

./: .gitignore  CMakeLists.txt  platformio.ini
include/: api.h.example
lib/llm_client/: CMakeLists.txt  llm_client.c  llm_client.h
lib/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
src/: CMakeLists.txt  main.c
test/: README.md
